
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "econml-treatment-effect-studio"
version = "0.1.0"
description = "Build a treatment-effect studio that turns uplift heterogeneity into targeting strategy, policy summaries, and intervention recommendations."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
